Wire mark read/unread end-to-end with tests and bug fixes
Add EmailRepository.updateRead and wire it through EmailService into
EmailWebService.emailActionHandler. The handler now parses form data
manually with parseFormEncodedMulti instead of relying on Helidon's
broken automatic Map deserialization.

Fix missing stmt.executeUpdate() in DbEmailRepository.updateFlags and
updateRead. DbUtil.withPreparedStmtConsumer delegates execution to the
consumer, so the statement was silently no-op'ing.

Normalize template action names to email_action_mark_read / _mark_unread
across emailheader.peb, account.peb, and emailviewer.peb. Add read/unread
toggle to the viewer toolbar.

Tests:
- EmailServiceTest: unit test verifying read flip leaves starred intact
- EmailWebServiceActionTest: integration test with real SQLite and a
  minimal Helidon server covering single and bulk mark read/unread
- e2e: two Playwright tests for bulk toolbar and per-email hover actions

All 40 unit tests and 14 e2e tests pass.